# hello-vca

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md
bootloader/board_conf/: mp13x-devboard-v0.4.hh  mp153-devboard-v0.2.hh
cmake/: arch_mp13x.cmake  ccache.cmake
docs/: building_firmware.md  firmware-debugging.md  loading-firmware.md  project-layout.md  setup-environment.md
flashing/: bin_to_uimg.py  mm-a7-t32.cmm
lib/cmsis/Core_A/Include/: core_ca.h
lib/stm32-hal/stm32mp13/src/: stm32mp13xx_ll_tim.c
src/: CMakeLists.txt  ld.h
src/audio/: audio.cc  audio.hh
src/board/: debug.hh  debug_raw.h  devboard.hh  devboard_mp133_v0.3.hh  devboard_mp153_v0.2.hh
src/board/conf/: adc_periph_conf.hh  analog_pins.hh  board_codec_conf.hh  codec_sai_conf.hh  console_uart_conf.hh  control_conf.hh  i2c_shared_conf.hh  pin_conf.hh  qspi_flash_conf.hh  rcc_conf.hh  stream_conf.hh
src/console/: pr_dbg.hh  uart_log.cc  uart_log.hh  write.cc
src/controls/: controls.cc  controls.hh
src/core_a7/: app_startup.hh  main.cc  stm32mp13xx_hal_conf.h  stm32mp1xx_hal_conf.h
src/flash/: flash_loader.cc  norflash_layout.hh  settings_flash.hh
src/flash_loader/: flash_loader.cc  flash_loader.hh
src/memory/: static_buffers.cc  static_buffers.hh
src/module/: CMakeLists.txt  math.hh  module.cc  module.hh  module_player.hh  plugin.hpp  rack_shim.hh  settings.hh
src/params/: leds.hh  metaparams.hh  param_block.hh  params.hh
system/: libc_init_array.c  libc_stub.c  memcpy.c  memmove.c  memset.c  mmu_ca7.c  startup_ca7.s
system/linker/: memory.ld  stm32mp13x.ld  stm32mp15xx_ca7.ld
tests/: Makefile
